fix some points alignment

--- a/css/index.css
+++ b/css/index.css
@@ -11,13 +11,13 @@ body {
 .guitar-neck-container {
     position: relative;
     cursor: pointer;
-    overflow-x: auto;
-    width: fit-content;
+    width: 700px;
+    height: auto;
 }
 
 #guitar-neck {
     display: block;
-    max-width: 100%;
+    width: 100%;
     height: auto;
 }
 
@@ -26,7 +26,7 @@ body {
     top: 0;
     left: 0;
     pointer-events: none;
-    width: 100%;
+    width: calc(100% - 210px);
     height: 100%;
 }
 
